# zivid-halide-fork

./: CMakeLists.txt  Makefile  pyproject.toml  requirements.txt
apps/: CMakeLists.txt
apps/cuda_mat_mul/: CMakeLists.txt  runner.cpp
apps/onnx/: CMakeLists.txt  Makefile  check.py  model.cpp  model.py  model_test.py  results.txt  zivid_robocolor_denoise_test.cc
dependencies/llvm/: CMakeLists.txt
python_bindings/: CMakeLists.txt
python_bindings/src/: PyError.cpp  PyHalide.h
python_bindings/src/halide/halide_/: PyHalide.cpp
src/: CMakeLists.txt  CodeGen_C.cpp  CodeGen_C.h  CodeGen_LLVM.cpp  CodeGen_LLVM.h
src/runtime/: CMakeLists.txt  HalideBuffer.h  device_interface.cpp  gpu_context_common.h  opencl.cpp  printer.h
src/tools/: CMakeLists.txt
test/correctness/: CMakeLists.txt
user/: CMakeLists.txt  build.sh  main.cpp  reprod.py
user/docker/: Dockerfile
